Fixed generated scaffold's code to show without any error

--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -8,10 +8,10 @@
 
   .field
     = f.label :user
-    = f.text_field :user
+    = f.text_field :user_id
   .field
     = f.label :location
-    = f.text_field :location
+    = f.text_field :location_id
   .field
     = f.label :jenis
     = f.text_field :jenis
