--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -17,8 +17,8 @@
 
   - @jobs.each do |job|
     %tr
-      %td= job.user
-      %td= job.location
+      %td= job.user_id
+      %td= job.location_id
       %td= job.jenis
       %td= job.skim
       %td= job.gred
