--- a/app/views/jobs/show.html.haml
+++ b/app/views/jobs/show.html.haml
@@ -2,10 +2,10 @@
 
 %p
   %b User:
-  = @job.user
+  = @job.user_id
 %p
   %b Location:
-  = @job.location
+  = @job.location_id
 %p
   %b Jenis:
   = @job.jenis
