--- a/app/views/admin/titles/show.html.haml
+++ b/app/views/admin/titles/show.html.haml
@@ -2,8 +2,8 @@
 
 %p
   %b Nama:
-  = @admin_title.nama
+  = @title.nama
 
-= link_to 'Edit', edit_admin_title_path(@admin_title)
+= link_to 'Edit', edit_admin_title_path(@title)
 \|
 = link_to 'Back', admin_titles_path
