Added column skim dalam Title and added unique key to Title

--- a/app/views/admin/titles/_form.html.haml
+++ b/app/views/admin/titles/_form.html.haml
@@ -9,5 +9,8 @@
   .field
     = f.label :nama
     = f.text_field :nama
+  .field
+    = f.label :skim
+    = f.text_field :skim
   .actions
     = f.submit 'Save'
