Job expiry is set based only on date

--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -29,7 +29,7 @@
     = f.text_field :nama_organisasi
   .field
     = f.label :expired_at
-    = f.datetime_select :expired_at
+    = f.date_select :expired_at
   .field
     = f.hidden_field :is_exchange, value: false
   .actions
