Display nama tempat, not ID

--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -16,7 +16,7 @@
   - @jobs.each do |job|
     %tr
       %td= job.user_id
-      %td= job.location_id
+      %td= job.location.nama
       %td= job.gred
       %td= job.nota
       %td= job.nama_organisasi
