Added basic add/remove nested elements

--- a/app/views/jobs/_next_job_fields.html.haml
+++ b/app/views/jobs/_next_job_fields.html.haml
@@ -1,4 +1,3 @@
-.nested-fields
-  %hr
-  = render 'location_fields', f: f
-  = link_to_remove_association "remove next job", f
+%hr
+= render 'location_fields', f: f
+= f.link_to_remove "Remove this task"
