--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @job do |f|
+= nested_form_for @job do |f|
   - if @job.errors.any?
     #error_explanation
       %h2= "#{pluralize(@job.errors.count, "error")} prohibited this job from being saved:"
@@ -31,10 +31,9 @@
     = f.label :expired_at
     = f.date_select :expired_at
 
-  #next-jobs
-    = f.fields_for :next_jobs do |next_job_form|
-      = render 'next_job_fields', f: next_job_form
-    = link_to_add_association 'add next job', f, :next_jobs
+  = f.fields_for :next_jobs do |next_job_form|
+    = render 'next_job_fields', f: next_job_form
+  = f.link_to_add "Add a next job", :next_jobs
 
   .actions
     = f.submit 'Save'
