--- a/app/views/jobs/_next_job_fields.html.haml
+++ b/app/views/jobs/_next_job_fields.html.haml
@@ -2,4 +2,6 @@
   = @job.next_jobs[index].location_id
   = i.collection_select :location_id, Location.states, :id, :nama, { include_blank: true }, { class: "job_state_id", id: "job_state_id" }
   = i.grouped_collection_select :location_id, Location.states, :districts, :nama, :id, :nama, {}, {class: "job_location_id"}
+  = hidden_field_tag "state_val", @job.next_jobs[index].get_state
+  = hidden_field_tag "location_val", @job.next_jobs[index].location_id
   = i.link_to_remove "Remove this task #{index}"
