Added helper to show notification message

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,12 +13,6 @@
         - else
           = render 'layouts/user_menu'
 
-      - unless notice.blank? and alert.blank?
-        .notification
-          .alert.fade.in
-            %a.close{:"data-dismiss" => "alert"}×
-            %strong
-              Warning!
-            = notice || alert
+      = show_flash(notice, alert)
 
       = yield
