--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -28,14 +28,14 @@
               = resource.errors[:password].join(", ")
 
       = normal_div_if resource.errors[:password_confirmation].empty? do
-        = f.label :password_confirmation
+        = f.label :password_confirmation, class: "control-label"
         .controls
           = f.password_field :password_confirmation
           %span.help-inline
             = resource.errors[:password_confirmation].join(", ")
 
       = normal_div_if resource.errors[:current_password].empty? do
-        = f.label :current_password
+        = f.label :current_password, class: "control-label"
         .controls
           = f.password_field :current_password
           %span.help-inline
