--- a/app/views/jobs/new.html.haml
+++ b/app/views/jobs/new.html.haml
@@ -1,5 +1,9 @@
-%h1 New job
+.page-header
+  %h1
+    Jawatan Baru
+    %small
+      Pengiklanan
 
-= render 'form'
-
-= link_to 'Back', jobs_path
+.row
+  .span12
+    = render 'form'
