--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -5,3 +5,23 @@ body {
 .header {
   margin-bottom: 60px;
 }
+
+.align-center {
+  text-align: center;
+}
+
+.align-left {
+  text-align: left;
+}
+
+.align-right {
+  text-align: right;
+}
+
+#searchbox > form {
+  margin: 0;
+}
+
+.highlight {
+  background-color: #ddd;
+}
