--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -1,5 +1,7 @@
 %ul.nav.nav-pills.pull-right
   %li.active
+    = link_to "Pergerakan", root_path
+  %li
     = link_to "Blog", "http://pertukaran.tumblr.com/"
   %li
     = link_to "Daftar", new_user_registration_path
