--- a/app/views/layouts/_user_menu.html.haml
+++ b/app/views/layouts/_user_menu.html.haml
@@ -1,5 +1,7 @@
 %ul.nav.nav-pills.pull-right
   %li.active
+    = link_to "Pergerakan", root_path
+  %li
     = link_to "Jawatan", jobs_path
   %li
     = link_to "Akaun", edit_user_registration_path
