Renamed application and related strings to Bertukar

--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -1,8 +1,8 @@
 %ul.nav.nav-pills.pull-right
   %li.active
-    = link_to "Pergerakan", root_path
+    = link_to "Utama", root_path
   %li
-    = link_to "Blog", "http://pertukaran.tumblr.com/"
+    = link_to "Blog", "http://bertukar.tumblr.com/"
   %li
     = link_to "Daftar", new_user_registration_path
   %li
