--- a/app/views/layouts/_user_menu.html.haml
+++ b/app/views/layouts/_user_menu.html.haml
@@ -1,6 +1,6 @@
 %ul.nav.nav-pills.pull-right
   %li.active
-    = link_to "Pergerakan", root_path
+    = link_to "Utama", root_path
   %li
     = link_to "Jawatan", jobs_path
   %li
