--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html{ :xmlns => "http://www.w3.org/1999/xhtml", :lang => "en", 'xml:lang' => "en" }
   %head
-    %title Pergerakan
+    %title Bertukar
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
