--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -3,7 +3,7 @@
     #searchbox
       = search_form_for @q, url: search_index_path, html: { method: :get, class: "form-inline" } do |f|
         = f.collection_select :title_skim_eq, Title.unscoped.order(:skim), :skim, :skim, { include_blank: true }, { class: "span1" }
-        = f.text_field :gred_eq, class: "span1", placeholder: "1-1"
+        = f.text_field :gred_eq, class: "span1", placeholder: "41"
         = f.collection_select :location_id_or_location_state_id_eq, Location.states, :id, :nama, { include_blank: true }
         = f.submit "Cari", class: "btn btn-primary"
   .span3
