--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,35 +1,59 @@
-.row
-  .span6.offset3.align-center.well
-    #searchbox
-      = search_form_for @q, url: search_index_path, html: { method: :get, class: "form-inline" } do |f|
-        = f.collection_select :title_skim_eq, Title.unscoped.order(:skim), :skim, :skim, { include_blank: true }, { class: "span1" }
-        = f.text_field :gred_eq, class: "span1", placeholder: "41"
-        = f.collection_select :location_id_or_location_state_id_eq, Location.states, :id, :nama, { include_blank: true }
-        = f.submit "Cari", class: "btn btn-primary"
-  .span3
-    &nbsp;
+- if current_user.nil?
+  .jumbotron
+    %h1
+      Tingkatkan peluang pertukaran anda!
+    %p.lead
+      Kami tahu ramai penjawat awam yang ingin membuat pertukaran tempat kerja secara suka sama suka
+      tapi tiada tempat untuk iklankan jawatan anda. Dengan aplikasi ini ianya pasti dapat mencerahkan
+      lagi peluang anda.
+    = link_to "Daftar untuk iklan", new_user_registration_path, class: "btn btn-large btn-success"
+    = link_to "Buat carian sekarang", new_user_registration_path, class: "btn btn-large btn"
 
-.row
-  - unless @jobs.count > 0
-    .span6.offset3.align-center
-      Tiada keputusan. Sila buat carian lain.
-  - else
-    - unless params[:q].nil?
-      - @jobs.each do |job|
-        .span6.offset3.align-center
-          .row
-            .span1
-              = job.title.skim
-              = job.gred
-            .span4.align-left
-              .row
-                = show_location(job.location)
-              .row
-                = job.nama_organisasi
-              .row
-                = time_ago_in_words(job.created_at)
-            .span1
-              = link_to search_path(job), class: "btn" do
-                %i.icon-eye-open
-        .span3
-          &nbsp;
+- else
+  .row-fluid
+    .align-center.well
+      #searchbox
+        = search_form_for @q, url: search_index_path, html: { method: :get, class: "form-inline" } do |f|
+          = f.text_field :gred_eq, class: "span1", placeholder: "F41"
+          = f.collection_select :location_id_or_location_state_id_eq, Location.states, :id, :nama, { include_blank: true }
+          = f.submit "Cari", class: "btn btn-primary"
+
+  .row-fluid
+    - unless @noresult
+      .span12
+      - if @jobs.length > 0
+        %table.table.table-striped
+          %thead
+            %tr
+              %th #
+              %th Lokasi Lama
+              %th Lokasi Dicari
+              %th Gred
+              %th Waktu Iklan
+              %th
+          %tbody
+            - @jobs.each.with_index do |job, index|
+              %tr
+                %td= index + 1
+                %td
+                  = "#{job.location.nama}, #{job.location.state.nama}"
+                %td
+                  - if job.next_jobs.length == 1
+                    = "#{job.next_jobs[0].location.nama}, #{job.next_jobs[0].location.state.nama}"
+                  - elsif job.next_jobs.length > 1
+                    %ul
+                      - job.next_jobs.each do |next_job|
+                        %li
+                          = "#{next_job.location.nama}, #{next_job.location.state.nama}"
+                  - else
+                    \-
+
+                %td= job.gred
+                %td
+                  = time_ago_in_words(job.created_at)
+                  ago
+                %td.right
+                  = link_to job, class: "btn btn-small" do
+                    %i.icon-eye-open
+      - else
+        Tiada keputusan.
