Updated Ministries views

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -35,6 +35,10 @@ td.right {
   text-align: right;
 }
 
+.right {
+  text-align: right;
+}
+
 /* Custom container */
 .container-narrow {
   margin: 0 auto;
