--- a/app/views/admin/ministries/_form.html.haml
+++ b/app/views/admin/ministries/_form.html.haml
@@ -1,16 +1,26 @@
-= form_for [:admin, @ministry] do |f|
-  -if @ministry.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@ministry.errors.count, "error")} prohibited this ministry from being saved:"
+= form_for [:admin, @ministry], html: { class: "form-horizontal" } do |f|
+  - if @ministry.errors[:base].any?
+    .alert.alert-error
+      %button.close{ :"type" => "button", :"data-dismiss" => "alert" }
+        = raw("&times;")
+      %h4 Errors
       %ul
-        - @ministry.errors.full_messages.each do |msg|
+        - @ministry.errors[:base].each do |msg|
           %li= msg
 
-  .field
-    = f.label :nama
-    = f.text_field :nama
-  .field
-    = f.label :is_aktif
-    = f.check_box :is_aktif
-  .actions
-    = f.submit 'Save'
+  .row
+    = normal_div_if @ministry.errors[:nama].empty? do
+      = f.label :nama, class: "control-label"
+      .controls
+        = f.text_field :nama, class: "input-xlarge", placeholder: "Kementerian Pengajian Tinggi"
+        %span.help-inline
+          = @ministry.errors[:nama].join(", ")
+
+    = normal_div_if @ministry.errors[:is_aktif].empty? do
+      .controls
+        = f.label :is_aktif, class: "checkbox" do
+          = f.check_box :is_aktif
+          Aktif
+
+    .form-actions
+      = f.submit 'Save', class: "btn btn-primary"
