--- a/app/views/admin/ministries/edit.html.haml
+++ b/app/views/admin/ministries/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing ministry
+.page-header
+  %h1
+    Kemaskini Kementerian
 
-= render 'form'
-
-= link_to 'Show', [:admin, @ministry]
-\|
-= link_to 'Back', admin_ministries_path
+.row
+  .span12
+    = render 'form'
