--- a/app/views/admin/ministries/index.html.haml
+++ b/app/views/admin/ministries/index.html.haml
@@ -1,21 +1,33 @@
-%h1 Listing ministries
+.page-header
+  %h1.pull-left
+    Senarai Kementerian
+  .page-actions.pull-right
+    = link_to "Kementerian Baru", new_admin_ministry_path, class: "btn btn-primary"
+  .clearfix
 
-%table
-  %tr
-    %th Nama
-    %th Is aktif
-    %th
-    %th
-    %th
-
-  - @ministries.each do |ministry|
-    %tr
-      %td= ministry.nama
-      %td= ministry.is_aktif
-      %td= link_to 'Show', [:admin, ministry]
-      %td= link_to 'Edit', edit_admin_ministry_path(ministry)
-      %td= link_to 'Destroy', [:admin, ministry], :confirm => 'Are you sure?', :method => :delete
-
-%br
-
-= link_to 'New Ministry', new_admin_ministry_path
+.row-fluid
+  .span12
+    - if @ministries.length > 0
+      %table.table.table-striped
+        %thead
+          %tr
+            %th #
+            %th Nama
+            %th Aktif
+            %th
+        %tbody
+          - @ministries.each_with_index do |ministry, index|
+            %tr
+              %td= index + 1
+              %td= ministry.nama
+              %td= ministry.is_aktif.to_s.upcase
+              %td.right
+                .btn-group
+                  = link_to [:admin, ministry], class: "btn btn-small" do
+                    %i.icon-eye-open
+                  = link_to edit_admin_ministry_path(ministry), class: "btn btn-small" do
+                    %i.icon-pencil
+                  = link_to [:admin, ministry], :data => { :confirm => 'Are you sure?' }, :method => :delete, class: "btn btn-small btn-danger" do
+                    %i.icon-trash.icon-white
+    - else
+      Tiada kementerian.
