--- a/app/views/admin/ministries/new.html.haml
+++ b/app/views/admin/ministries/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New ministry
+.page-header
+  %h1
+    Kementerian Baru
 
-= render 'form'
-
-= link_to 'Back', admin_ministries_path
+.row
+  .span12
+    = render 'form'
