--- a/app/views/admin/ministries/show.html.haml
+++ b/app/views/admin/ministries/show.html.haml
@@ -1,12 +1,29 @@
-%p#notice= notice
+.page-header
+  %h1.pull-left
+    Kementerian
+  .page-actions.pull-right
+    .btn-group
+      %button.btn.btn-primary
+        Actions
+      %button.btn.btn-primary.dropdown-toggle{ :"data-toggle" => "dropdown" }
+        %span.caret
+      %ul.dropdown-menu.pull-right
+        %li
+          = link_to "Kemaskini", edit_admin_ministry_path(@ministry)
+        %li.divider
+        %li
+          = link_to "Padam", [:admin, @ministry], :data => { :confirm => 'Are you sure?' }, :method => :delete
+  .clearfix
 
-%p
-  %b Nama:
-  = @ministry.nama
-%p
-  %b Is aktif:
-  = @ministry.is_aktif
-
-= link_to 'Edit', edit_admin_ministry_path(@ministry)
-\|
-= link_to 'Back', admin_ministries_path
+.row-fluid
+  .span2.right
+    %strong
+      Nama:
+  .span10
+    = @ministry.nama
+.row-fluid
+  .span2.right
+    %strong
+      Aktif:
+  .span10
+    = @ministry.is_aktif.to_s.upcase
